List of tags for xml

--- a/ckanext-editor/ckanext/editor/templates/base.html
+++ b/ckanext-editor/ckanext/editor/templates/base.html
@@ -13,7 +13,9 @@ body {background-image: none}
   <h2> Column selection </h2>
   Select columns from the original:
   <div class="container-fluid border border-primary rounded">
-      <pre><code>Test</code></pre>
+      <pre><code>{% for i in root.findall("*") %}
+      {% print i.tag %} 
+      {% endfor %}</code></pre>
   </div>
   <br>
   <button type="button" class="btn btn-primary">Create columns</button>
