Treeview and table in editor

--- a/ckanext-editor/ckanext/editor/templates/base.html
+++ b/ckanext-editor/ckanext/editor/templates/base.html
@@ -44,7 +44,7 @@ body {background-image: none}
       </tr>
     </thead>
     <tbody>
-      {% for i in tags %}
+      {% for i in tag_list %}
         <tr>
           <td scope="row"> {{ i }} </td>
           <td> 
