--- a/ckanext-editor/ckanext/editor/templates/base.html
+++ b/ckanext-editor/ckanext/editor/templates/base.html
@@ -2,6 +2,7 @@
 {% block page %}
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 <style>
 html {
   font-size: 100%;
@@ -12,12 +13,24 @@ body {background-image: none}
 <div class="container-fluid bg-white border rounded p-3">
   <h2> Column selection </h2>
   Select columns from the original:
-  <div class="container-fluid border border-primary rounded">
-      <pre><code>{% print treeview %}</code></pre>
+  <div class="container-fluid border border-primary rounded" id="aaa">
+  {% print treeview %}
   </div>
   <br>
   <button type="button" class="btn btn-primary">Create columns</button>
 </div>
+<script>
+window.onload = function () {
+    var aaa = document.getElementById("aaa");
+    var bbb = aaa.getElementsByTagName("ul");
+    for (var i = 0; i < bbb.length; ++i) {
+      var list = bbb[i].getElementsByTagName("li");
+      for (var i = 0; i < list.length; ++i) {
+        console.log(list[i].id)
+        console.log(list[i].innerText)
+    }}  
+};
+</script>
 
 <br>
 
