--- a/ckanext-editor/ckanext/editor/templates/base.html
+++ b/ckanext-editor/ckanext/editor/templates/base.html
@@ -3,6 +3,32 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script>
+  var checked = []
+  function getCheckedBoxes() {
+    var box = [];
+    var treeview = document.getElementById("treeview");
+    var ul = treeview.getElementsByTagName("ul");
+    for (var i = 0; i < ul.length; ++i) {
+      var list = ul[i].getElementsByTagName("li");
+      for (var j = 0; j < list.length; ++j) {
+        var temp = [];
+        temp.push(list[j].childNodes[0].checked);
+        temp.push(list[j].innerText);
+        box.push(temp);
+      }
+    }
+    return box;
+  }
+  
+  function term() {
+    checked = getCheckedBoxes();
+    var input = document.getElementById("input-script");
+    var output = eval(input.value)
+    document.getElementById('output-script').innerHTML = output;
+  }
+</script>
 <style>
 html {
   font-size: 100%;
@@ -18,23 +44,6 @@ body {background-image: none}
   <br>
   <button type="button" class="btn btn-primary" onclick=getCheckedBoxes();>Create columns</button>
 </div>
-<script>
-function getCheckedBoxes() {
-    var checked = [];
-    var treeview = document.getElementById("treeview");
-    var ul = treeview.getElementsByTagName("ul");
-    for (var i = 0; i < ul.length; ++i) {
-      var list = ul[i].getElementsByTagName("li");
-      for (var j = 0; j < list.length; ++j) {
-        var temp = [];
-        temp.push(list[j].childNodes[0].checked);
-        temp.push(list[j].innerText);
-        checked.push(temp);
-      }
-    }
-    console.log(checked);
-}
-</script>
 
 <br>
 
@@ -47,10 +56,6 @@ function getCheckedBoxes() {
     </div>
     <button type="button" class="btn btn-secondary" onclick=term();>Run</button>
   </div>
-  <div class="form-group">
-  <label for="script">Test</label>
-  <input type="text" class="form-control bg-white border border-primary rounded" id="script">
-</div>
   <br>
   <button type="button" class="btn btn-primary">Create columns</button>
 </div>
@@ -101,25 +106,3 @@ function getCheckedBoxes() {
 <button type="button" class="btn btn-primary">Create columns</button>
 {% endblock %}
 
-<script>
-  var checked = [];
-  function getCheckedBoxes() {
-    var treeview = document.getElementById("treeview");
-    var ul = treeview.getElementsByTagName("ul");
-    for (var i = 0; i < ul.length; ++i) {
-      var list = ul[i].getElementsByTagName("li");
-      for (var j = 0; j < list.length; ++j) {
-        var temp = [];
-        temp.push(list[j].childNodes[0].checked);
-        temp.push(list[j].innerText);
-        checked.push(temp);
-      }
-    }
-    return checked;
-  }
-  function term() {
-    var input = document.getElementById("input-script");
-    var output = eval(input.value)
-    document.getElementById('output-script').innerHTML = output;
-  }
-</script>
