--- a/ckanext-editor/ckanext/editor/templates/base.html
+++ b/ckanext-editor/ckanext/editor/templates/base.html
@@ -1,9 +1,23 @@
+{######################### CKAN #########################}
 {% ckan_extends %}
 {% block page %}
 
+{######################### HTML #########################}
+
+<------------------------ Imports ----------------------->
+
+<- CSS ->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
+<style>
+html {
+  font-size: 100%;
+}
+body {background-image: none}
+</style>
+
+<- JS ->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
 <script>
   var checked = [];
@@ -35,13 +49,9 @@
   });
 });
 </script>
-<style>
-html {
-  font-size: 100%;
-}
-body {background-image: none}
-</style>
 
+
+<------------------------ Main ----------------------->
 
 <div id="jstree_demo_div"></div>
 <div class="container-fluid bg-white border rounded p-3">
@@ -114,6 +124,6 @@ body {background-image: none}
 </div>
 
 <button type="button" class="btn btn-primary">Create columns</button>
+
+{######################### CKAN #########################}
 {% endblock %}
-
-
