jstree flask to js

--- a/ckanext-editor/ckanext/editor/templates/base.html
+++ b/ckanext-editor/ckanext/editor/templates/base.html
@@ -21,6 +21,7 @@ body {background-image: none}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
 <script>
   var schema = [];
+  console.log({{data}})
   function getCheckedBoxes() {
     var treeview = document.getElementById("treeview");
     var ul = treeview.getElementsByTagName("ul");
