--- a/ckanext-editor/ckanext/editor/templates/base.html
+++ b/ckanext-editor/ckanext/editor/templates/base.html
@@ -21,7 +21,8 @@ body {background-image: none}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
 <script>
   var schema = [];
-  console.log({{data}})
+  console.log({{ data |safe }})
+  
   function getCheckedBoxes() {
     var treeview = document.getElementById("treeview");
     var ul = treeview.getElementsByTagName("ul");
@@ -38,11 +39,11 @@ body {background-image: none}
   }
   function term() {
     var input = document.getElementById("input-script");
-    var output = eval(input.value)
+    var output = input.value
     document.getElementById('output-script').innerHTML = output;
   }
   $(function () {
-  $("#jstree_demo_div").jstree({
+  $("#jstree").jstree({
     "checkbox" : {
       "keep_selected_style" : false
     },
@@ -54,7 +55,7 @@ body {background-image: none}
 
 <!------------------------ Main ----------------------->
 
-<div id="jstree_demo_div"></div>
+
 <div class="container-fluid bg-white border rounded p-3">
   <h2> Column selection </h2>
   Select columns from the original:
